fix: ui spacing

--- a/src/assets/styles/About.css
+++ b/src/assets/styles/About.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     min-height: 42.5rem;
-    height: 85vh;
+    height: 75vh;
     padding: 2.5rem 1rem 2.5rem 1rem !important;
 }
 
