--- a/src/assets/styles/Kuma.css
+++ b/src/assets/styles/Kuma.css
@@ -18,6 +18,7 @@
 }
 
 .kuma-section {
+    padding-top: 0px;
     height: 75rem;
     max-height: 75rem;
 }
